%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: BootController
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: Kick
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Ready
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Cancel
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110269513}
  m_TransitionDuration: .0780802965
  m_TransitionOffset: .0232723542
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Ready
    m_EventTreshold: 0
    m_ExitTime: .921919703
  - m_ConditionMode: 1
    m_ConditionEvent: Kick
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110105345
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110277842}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .06569428
  m_TransitionOffset: .0127181355
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Cancel
    m_EventTreshold: 0
    m_ExitTime: .934305727
  - m_ConditionMode: 1
    m_ConditionEvent: Ready
    m_EventTreshold: 0
    m_ExitTime: .967787802
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110119276
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110269513}
  m_DstState: {fileID: 110277842}
  m_TransitionDuration: .0941812098
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Ready
    m_EventTreshold: 0
    m_ExitTime: .90581882
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110169174
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110277842}
  m_DstState: {fileID: 110269513}
  m_TransitionDuration: .0665352419
  m_TransitionOffset: .00524937827
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .933464766
  - m_ConditionMode: 1
    m_ConditionEvent: Kick
    m_EventTreshold: 0
    m_ExitTime: .933464766
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110189668
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110277842}
  m_TransitionDuration: .0461135507
  m_TransitionOffset: .028448116
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Cancel
    m_EventTreshold: 0
    m_ExitTime: .953886449
  - m_ConditionMode: 1
    m_ConditionEvent: Cancel
    m_EventTreshold: 0
    m_ExitTime: .953886449
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: BootIdle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 9c9cde1245e8e6a48a907f3467d8ddf5, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 168, y: -60, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110269513
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Kicking
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: c583f91afa653154c88ffc68c37a4228, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 84, y: 120, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110277842
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: SleepingBoot
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 4de8f8e0db8c8684d960c35f045a74a3, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 312, y: 24, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110277842}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110269513}
  - {fileID: 110277842}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110277842}
      second:
      - {fileID: 110105345}
      - {fileID: 110169174}
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110100000}
      - {fileID: 110189668}
    data:
      first: {fileID: 110269513}
      second:
      - {fileID: 110119276}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 36, y: 36, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
